@@ -4,6 +4,8 @@
 # Enable echoing commands
 trap 'echo "[$USER@$(hostname) $PWD]\$ $BASH_COMMAND"' DEBUG
 
+export GRADLE_OPTS="-Xmx1024m -Xms256m -XX:MaxPermSize=512m"
+
 
 export AWS_CREDENTIAL_PROFILES_FILE=$JENKINS_HOME/credentials
 export AWS_CREDENTIAL_PRIVATE_KEY_FILE=$JENKINS_HOME/dotcms-dev-test-deploy-2017-02-0x5513.pem
